--- a/_posts/2021-10-08-res.md
+++ b/_posts/2021-10-08-res.md
@@ -4,4 +4,27 @@ title:  "My research projects"
 categories: jekyll update
 permalink: /research/
 ---
-This is my research projects.
+## Undergraduate Research
+
+A. Arm Motion Measurement for Eccentric Driver Simulation
+May 2021 - present
+Astrophysics: Analyzing the spiral arm motion pattern activated by companions with eccentric orbits.
+_Technical highlight_: Developing a package to fit spiral arm motion conveniently.[Github]
+
+B. Spiral Arm Pattern Motion in the SAO 206462 Protoplanetary Disk ([ApJL])
+Aug. 2020 – Jan. 2021
+Astrophysics: Analyzing the spiral arm motion of SAO 206462 system.
+_Technical highlight_: Ruled out the gravitational instability mechanism for SAO 206462 system with only data of one year separation. 
+_Scientific highlight_: Discovered the first system whose two spiral arms are driven by two planets respectively. 
+![results][/assets/res2.JPG]
+
+
+
+
+
+
+
+
+
+[ApJL]: https://iopscience.iop.org/article/10.3847/2041-8213/abd241/pdf
+[Github]: https://github.com/wddlx/Spiral-arm-motion-calculator
