--- a/_posts/2021-11-18-CV.md
+++ b/_posts/2021-11-18-CV.md
@@ -4,6 +4,6 @@ title:  "CV"
 categories: jekyll update
 permalink: /CV/
 ---
-you can [download pdf](https://wddlx.github.io/assets/CV.pdf) here.
+you can [download pdf](https://wddlx.github.io/assets/CV_Chengy.pdf) here.
 
 
